# fmarch

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.frontend  docker-compose.yml  package-lock.json  package.json  railway.toml
.cargo/: config.toml
crates/api/: Cargo.toml
crates/api/src/: identity_delivery.rs  lib.rs
crates/api/tests/: auth_methods.rs  authenticated_transport.rs  encryption_thread_read.rs  vertical.rs
crates/caps/: Cargo.toml
crates/caps/src/: lib.rs
crates/commands/: Cargo.toml
crates/commands/fixtures/: night-babysitter-dependency-minimized.json  night-babysitter-dependency-nonminimal.json  night-babysitter-projection-state-generated-bad-expectation.json  night-babysitter-projection-state-generated-minimized.json  night-backup-inheritance-generated-bad-expectation.json  night-backup-inheritance-generated-minimized.json  night-backup-projection-state-generated-bad-expectation.json  night-backup-projection-state-generated-minimized.json  night-bodyguard-strongman-vengeful-fixpoint-generated-bad-expectation.json  night-bodyguard-strongman-vengeful-fixpoint-generated-minimized.json  night-bodyguard-strongman-vengeful-projection-state-generated-bad-expectation.json  night-bodyguard-strongman-vengeful-projection-state-generated-minimized.json  night-bodyguard-strongman-vengeful-projection-state-generated-seed-97262-bad-expectation.json  night-bodyguard-strongman-vengeful-projection-state-generated-seed-97262-minimized.json  night-bomb-projection-state-generated-bad-expectation.json  night-bomb-projection-state-generated-minimized.json  night-conversion-deprogramming-generated-bad-expectation.json  night-conversion-deprogramming-generated-minimized.json  night-conversion-projection-state-generated-bad-expectation.json  night-conversion-projection-state-generated-minimized.json  night-extra-action-generated-bad-expectation.json  night-extra-action-generated-minimized.json  night-hider-dependency-minimized.json  night-hider-dependency-nonminimal.json  night-hider-projection-state-generated-bad-expectation.json  night-hider-projection-state-generated-minimized.json  night-hunter-projection-state-generated-bad-expectation.json  night-hunter-projection-state-generated-minimized.json  night-ignite-generated-bad-expectation.json  night-ignite-generated-minimized.json  night-item-grant-generated-bad-expectation.json  night-item-grant-generated-minimized.json  night-lovers-projection-state-generated-bad-expectation.json  night-lovers-projection-state-generated-minimized.json  night-mark-clear-expiry-generated-bad-expectation.json  night-mark-clear-expiry-generated-minimized.json  night-mark-clear-visibility-generated-bad-expectation.json  night-mark-clear-visibility-generated-minimized.json  night-passing.json  night-pgo-projection-state-generated-bad-expectation.json  (+17 more)
crates/commands/src/: day_program.rs  day_schedule.rs  day_scheduler.rs  lib.rs  model.rs  operator_process.rs  operator_proof.rs
crates/commands/tests/: pipeline.rs  runtime_cancellation.rs
crates/eventstore/: Cargo.toml
crates/eventstore/migrations/: 0001_init.sql
crates/eventstore/src/: lib.rs  upcaster.rs
crates/eventstore/tests/: concurrency.rs
crates/identity/: Cargo.toml
crates/identity/src/: error.rs  lib.rs  methods.rs  password.rs  session.rs  token.rs  workos.rs
crates/media/: Cargo.toml
crates/media/src/: lib.rs  variants.rs
crates/operator_api/: Cargo.toml
crates/operator_api/src/: lib.rs
crates/operator_api/tests/: operator_routes.rs  vertical.rs
crates/projections/: Cargo.toml
crates/projections/migrations/: 0001_baseline.sql  0001_init.sql  0002_projections.sql  0002_runtime_identity.sql  0002_workos_identity.sql  0003_authentication_methods.sql  0003_phase3.sql  0004_game_cohost_policy.sql  0004_thread_view.sql  0005_engine_state.sql  0005_identity_method_hardening.sql  0006_action_history.sql  0006_encrypt_private_projections.sql  0007_action_grant.sql  0007_security_capacity_ledgers.sql  0008_command_receipt.sql  0008_day_events.sql  0009_day_programs.sql  0009_sheriff_badge.sql  0010_day_event_schedules.sql  0010_player_notification.sql  0011_day_event_scheduler.sql  0011_host_prompt.sql  0012_day_event_auto_resolution.sql  0012_host_phase_control.sql  0013_day_event_narrative.sql  0013_slot_status.sql  0014_action_counter.sql  0015_investigation_memory.sql  0016_delayed_death_queue.sql  0017_visit_history.sql  0018_player_investigation_result.sql  0019_private_channel_member.sql  0020_day_vote_outcome.sql  0021_player_info_result.sql  0022_action_grant_option.sql  0023_auth_session.sql  0024_thread_view_media.sql  0025_auth_invite.sql  0026_auth_lifecycle.sql  (+21 more)
crates/projections/src/: lib.rs
crates/projections/tests/: baseline_contract.rs  e2e.rs  encryption_replay.rs
crates/server/: Cargo.toml
crates/server/src/: admission.rs  main.rs
crates/wire/: Cargo.toml
crates/wire/src/: lib.rs
crates/wire/tests/: typescript.rs
docs/: dev-test-game-hosted-evidence-operator-checklist.md  ui-ux-tablet-first-viewport-audit-2026-07-17.md  ui-workbench.md
frontend/: package-lock.json  package.json  svelte.config.js
programs/: bakery.json
scripts/: check-build-posture.sh  container-entrypoint.sh
tools/: auth_invite_role_proof.mjs  capacity_overload_contract.mjs  capacity_overload_contract.test.mjs  capacity_overload_proof.mjs  check_engine_v4_test_family_coverage.py  check_generated_shrink_matrix_gap_audit.py  check_primitive_modifier_interactions.py  community_moderation_role_proof.mjs  community_subscription_role_proof.mjs  completed_game_export_role_proof.mjs  completeness_scorecard.mjs  completeness_scorecard.test.mjs  dev_postgres.mjs  dev_postgres.test.mjs  dev_test_game.mjs  dev_test_game.test.mjs  dev_test_game_adjacent_artifact_paths.mjs  dev_test_game_admin_audit_handoff_contract.mjs  dev_test_game_admin_audit_handoff_contract.test.mjs  dev_test_game_admin_audit_handoff_path.mjs  dev_test_game_admin_audit_proof_helper.mjs  dev_test_game_admin_audit_surface_ids.mjs  dev_test_game_admin_spine.mjs  (+376 more)
(+759 files in other folders)
