[workspace]
resolver = "2"
members = [
    "crates/identity",
    "crates/community",
    "crates/domain",
    "crates/eventstore",
    "crates/projections",
    "crates/caps",
    "crates/commands",
    "crates/game_platform",
    "crates/wire",
    "crates/api",
    "crates/operator_api",
    "crates/server",
    "crates/media",
]

[workspace.package]
edition = "2021"
