[package]
name = "api"
version = "0.1.0"
edition.workspace = true

[dependencies]
caps = { path = "../caps" }
commands = { path = "../commands" }
domain = { path = "../domain" }
media = { path = "../media" }
projections = { path = "../projections" }
wire = { path = "../wire" }
argon2 = "0.5"
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
] }
tokio = { version = "1", features = ["rt", "sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
futures-util = "0.3"
png = "0.18"
tempfile = "3"
tokio-tungstenite = "0.29"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
