[package]
name = "api"
version = "0.1.0"
edition.workspace = true

[dependencies]
caps = { path = "../caps" }
community = { path = "../community" }
commands = { path = "../commands" }
domain = { path = "../domain" }
eventstore = { path = "../eventstore" }
identity = { path = "../identity" }
media = { path = "../media" }
projections = { path = "../projections" }
wire = { path = "../wire" }
axum = { version = "0.8", features = ["ws"] }
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
] }
tokio = { version = "1", features = ["rt", "sync", "time"] }
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
futures-util = "0.3"
png = "0.18"
sha2 = "0.10"
tempfile = "3"
tokio-tungstenite = "0.29"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
