[package]
name = "eventstore"
version = "0.1.0"
edition.workspace = true

[dependencies]
base64 = "0.22"
chacha20poly1305 = "0.10"
domain = { path = "../domain" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "json",
    "migrate",
    "macros",
] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
