[package]
name = "identity"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait = "0.1"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "sync"] }

[dev-dependencies]
serde_json = "1"
