[package]
name = "identity"
version = "0.1.0"
edition.workspace = true

[dependencies]
argon2 = "0.5"
async-trait = "0.1"
jsonwebtoken = "9"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "uuid",
] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serde_json = "1"
