[package]
name = "media"
version = "0.1.0"
edition.workspace = true

[dependencies]
avif-parse = "=2.1.0"
blake3 = "1"
image = { version = "=0.25.10", default-features = false, features = ["avif", "jpeg", "png", "webp"] }
image-webp = "=0.2.4"
ravif = { version = "=0.13.0", default-features = false }
rustix = { version = "1", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
image = { version = "=0.25.10", default-features = false, features = ["avif", "avif-native", "jpeg", "png", "webp"] }
png = "0.18"
tempfile = "3"
