[package]
name = "operator_api"
version = "0.1.0"
edition.workspace = true

[dependencies]
caps = { path = "../caps" }
commands = { path = "../commands" }
projections = { path = "../projections" }
wire = { path = "../wire" }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
