[package]
name = "projections"
version = "0.1.0"
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
eventstore = { path = "../eventstore" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "json",
    "migrate",
] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
