[package]
name = "server"
version = "0.1.0"
edition.workspace = true

[dependencies]
api = { path = "../api" }
identity = { path = "../identity" }
media = { path = "../media" }
operator_api = { path = "../operator_api" }
axum = "0.8"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "migrate",
] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
