[package]
name = "wire"
version = "0.1.0"
edition.workspace = true

[dependencies]
commands = { path = "../commands" }
projections = { path = "../projections" }
caps = { path = "../caps" }
domain = { path = "../domain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "10", features = ["uuid-impl"] }
uuid = { version = "1", features = ["v4", "serde"] }
